# TokenBar

./: .gitignore  LICENSE  Package.swift  README.md  THIRD_PARTY_NOTICES.md
Helper/: Cargo.toml  about.hbs  about.toml
Helper/src/: lib.rs  main.rs  pricing.rs  usage.rs
Helper/src/codex/: mod.rs  parser.rs
Resources/: AppIcon.icns  Info.plist  ThirdPartyLicenses.html
Scripts/: build_icon.sh  generate_licenses.sh  package_app.sh  release_app.sh
Sources/TokenBar/: ActivityDetailView.swift  DashboardView.swift  DemoData.swift  MenuTrackingShortcutMonitor.swift  RequestDetailMenuView.swift  SettingsView.swift  SettingsWindowController.swift  TokenBarApp.swift  TokenBarAppDelegate.swift  TokenBarMenu.swift  TokenBarStatusItemController.swift  TokenBarVisualStyle.swift  TokenMenuRowView.swift
Sources/TokenBarCore/: ActivityService.swift  CodexAppServerQuotaClient.swift  CodexQuotaService.swift  CodexResetCreditsClient.swift  DashboardModel.swift  MenuRowPresentation.swift  Models.swift  ProcessRunner.swift  RequestDetailService.swift  SnapshotCache.swift  TokenBarSettings.swift  TokscaleCopyLocator.swift  WeeklyQuotaPacing.swift
Tests/TokenBarCoreTests/: ActivityServiceTests.swift  CodexAppServerQuotaClientTests.swift  CodexQuotaServiceTests.swift  CodexResetCreditsClientTests.swift  DashboardModelTests.swift  MenuRowPresentationTests.swift  ProcessRunnerTests.swift  RequestDetailServiceTests.swift  SessionMenuTests.swift  SnapshotCacheTests.swift  TestFixtures.swift  TokenBarSettingsTests.swift  TokscaleCopyLocatorTests.swift  WeeklyQuotaPacingTests.swift
(+1 files in other folders)
