[package]
name = "tokenbar-helper"
version = "0.1.0"
edition = "2021"
description = "Local Codex activity parser for TokenBar"
license = "MIT"
repository = "https://github.com/wuruoye/TokenBar"
publish = false

[dependencies]
chrono = "0.4"
iana-time-zone = "0.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
